--- a/style.css
+++ b/style.css
@@ -3,18 +3,61 @@ body {
     font-family: sans-serif;
     color: white;
     font-size: 8px;
-    margin: 2rem auto;
-    max-width: 800px;
+    margin: 0 auto;
+    max-width: 1080px;
+    padding: 2rem;
+}
+
+a:link, a:visited {
+    color: #569156;
+    text-decoration: none;
+}
+
+a:link:hover {
+    text-decoration: underline;
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
+}
+
+h2 {
+    margin-top: 2rem;
+    font-size: 1.7rem;
+}
+
+h3 {
+    font-size: 1.3rem;
 }
 
 p {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
 }
 
 li {
     font-size: 1rem;
+    margin: 0.5rem 0;
+}
+
+img {
+    display: block;
+    border-radius: 0.25rem;
+    max-height: 10rem;
+}
+
+pre,
+code {
+    font-family: monospace;
+    background-color: #333;
+    border-radius: 0.25rem;
+}
+
+pre {
+    padding: 0.5rem;
+    font-size: 0.9rem;
+}
+
+footer {
+    margin-top: 3rem;
+    text-align: right;
 }
