--- a/style.css
+++ b/style.css
@@ -39,10 +39,34 @@ li {
     margin: 0.5rem 0;
 }
 
+hr {
+    margin: 2rem;
+}
+
 img {
     display: block;
     border-radius: 0.25rem;
     max-height: 10rem;
+}
+
+
+figure {
+    float: right;
+    max-width: 17rem;
+    margin: 0 1rem;
+}
+
+figure > img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+figcaption {
+    display: block;
+    max-width: 100%;
+    font-size: 0.8rem;
+    margin: 0.5rem 0;
+    font-style: italic;
 }
 
 pre,
